NLP TP/texts/robotics/robotics.stackexchange_0000047865.txt
Q:

Building pcl on OSX

Hello,
i followed @kevin's post on the  Rososx-mailinglist to compile pcl

I saved the package.xml from pcl then deleted the pcl package
grabbed the latest pcl via svn co http://svn.pointclouds.org/pcl/trunk
Added the modified CMakeLists.txt, pcl_find_ros.cmake and the old package.xml to the pcl folder

However building fails due to
 13%] Building CXX object io/tools/ply/CMakeFiles/pcl_plyheader.dir/plyheader.cpp.o
In file included from /Users/tatsch/ros_catkin_ws/src/pcl/io/src/image_grabber.cpp:47:
In file included from /usr/local/include/vtk-5.10/vtkImageReader2.h:41:
In file included from /usr/local/include/vtk-5.10/vtkImageAlgorithm.h:28:
In file included from /usr/local/include/vtk-5.10/vtkAlgorithm.h:32:
In file included from /usr/local/include/vtk-5.10/vtkObject.h:41:
In file included from /usr/local/include/vtk-5.10/vtkObjectBase.h:43:
In file included from /usr/local/include/vtk-5.10/vtkIndent.h:24:
In file included from /usr/local/include/vtk-5.10/vtkSystemIncludes.h:40:
In file included from /usr/local/include/vtk-5.10/vtkIOStream.h:108:
In file included from /usr/include/c++/4.2.1/backward/strstream:51:
/usr/include/c++/4.2.1/backward/backward_warning.h:32:2: warning: This file includes at least one deprecated or antiquated header. Please consider using one of the 32 headers found in section 17.4.1.2 of the C++ standard. Examples include substituting the <X> header for the <X.h> header for C++ includes, or <iostream> instead of the deprecated header <iostream.h>. To disable this warning use -Wno-deprecated. [-W#warnings]
#warning This file includes at least one deprecated or antiquated header. \
 ^
Linking CXX executable ../../../bin/pcl_plyheader
[ 13%] Built target pcl_plyheader
[ 13%] Building CXX object io/CMakeFiles/pcl_io.dir/src/hdl_grabber.cpp.o
/Users/tatsch/ros_catkin_ws/src/pcl/io/src/image_grabber.cpp:628:32: error: no viable overloaded '='
      cloud_color.header.stamp = timestamp;
      ~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~
/Users/tatsch/ros_catkin_ws/install_isolated/include/ros/time.h:169:22: note: candidate function (the implicit copy assignment operator) not viable: no known conversion from 'uint64_t' (aka 'unsigned long long') to 'const ros::Time' for 1st argument
  class ROSTIME_DECL Time : public TimeBase<Time, Duration>
                     ^
/Users/tatsch/ros_catkin_ws/src/pcl/io/src/image_grabber.cpp:664:26: error: no viable overloaded '='
      cloud.header.stamp = timestamp;
      ~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~
/Users/tatsch/ros_catkin_ws/install_isolated/include/ros/time.h:169:22: note: candidate function (the implicit copy assignment operator) not viable: no known conversion from 'uint64_t' (aka 'unsigned long long') to 'const ros::Time' for 1st argument
  class ROSTIME_DECL Time : public TimeBase<Time, Duration>
                     ^
/Users/tatsch/ros_catkin_ws/src/pcl/io/src/image_grabber.cpp:745:32: error: no viable overloaded '='
      cloud_color.header.stamp = timestamp;
      ~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~
/Users/tatsch/ros_catkin_ws/install_isolated/include/ros/time.h:169:22: note: candidate function (the implicit copy assignment operator) not viable: no known conversion from 'uint64_t' (aka 'unsigned long long') to 'const ros::Time' for 1st argument
  class ROSTIME_DECL Time : public TimeBase<Time, Duration>
                     ^
/Users/tatsch/ros_catkin_ws/src/pcl/io/src/image_grabber.cpp:787:26: error: no viable overloaded '='
      cloud.header.stamp = timestamp;
      ~~~~~~~~~~~~~~~~~~ ^ ~~~~~~~~~
/Users/tatsch/ros_catkin_ws/install_isolated/include/ros/time.h:169:22: note: candidate function (the implicit copy assignment operator) not viable: no known conversion from 'uint64_t' (aka 'unsigned long long') to 'const ros::Time' for 1st argument
  class ROSTIME_DECL Time : public TimeBase<Time, Duration>
                     ^
1 warning and 4 errors generated.
make[2]: *** [io/CMakeFiles/pcl_io.dir/src/image_grabber.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
Scanning dependencies of target pcl_ml
[ 13%] Building CXX object ml/CMakeFiles/pcl_ml.dir/src/point_xy_32i.cpp.o
[ 13%] Building CXX object ml/CMakeFiles/pcl_ml.dir/src/point_xy_32f.cpp.o
[ 13%] Building CXX object ml/CMakeFiles/pcl_ml.dir/src/densecrf.cpp.o
[ 14%] Building CXX object ml/CMakeFiles/pcl_ml.dir/src/pairwise_potential.cpp.o
[ 14%] Building CXX object ml/CMakeFiles/pcl_ml.dir/src/permutohedral.cpp.o
make[1]: *** [io/CMakeFiles/pcl_io.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 14%] Building CXX object ml/CMakeFiles/pcl_ml.dir/src/svm_wrapper.cpp.o
[ 14%] Building CXX object sample_consensus/CMakeFiles/pcl_sample_consensus.dir/src/sac_model_circle.cpp.o
Linking CXX shared library ../lib/libpcl_kdtree.dylib
[ 14%] Built target pcl_kdtree
[ 14%] Building CXX object ml/CMakeFiles/pcl_ml.dir/src/svm.cpp.o
[ 15%] Building CXX object ml/CMakeFiles/pcl_ml.dir/src/kmeans.cpp.o
Linking CXX shared library ../lib/libpcl_ml.dylib
[ 15%] Built target pcl_ml
[ 16%] Building CXX object sample_consensus/CMakeFiles/pcl_sample_consensus.dir/src/sac_model_cone.cpp.o
[ 16%] Building CXX object sample_consensus/CMakeFiles/pcl_sample_consensus.dir/src/sac_model_line.cpp.o
[ 16%] Building CXX object sample_consensus/CMakeFiles/pcl_sample_consensus.dir/src/sac_model_cylinder.cpp.o
[ 16%] Building CXX object sample_consensus/CMakeFiles/pcl_sample_consensus.dir/src/sac_model_circle3d.cpp.o
[ 16%] Building CXX object sample_consensus/CMakeFiles/pcl_sample_consensus.dir/src/sac_model_normal_plane.cpp.o
[ 17%] Building CXX object sample_consensus/CMakeFiles/pcl_sample_consensus.dir/src/sac_model_normal_sphere.cpp.o
[ 17%] Building CXX object sample_consensus/CMakeFiles/pcl_sample_consensus.dir/src/sac_model_normal_parallel_plane.cpp.o
[ 17%] Building CXX object sample_consensus/CMakeFiles/pcl_sample_consensus.dir/src/sac_model_stick.cpp.o
[ 17%] Building CXX object sample_consensus/CMakeFiles/pcl_sample_consensus.dir/src/sac_model_sphere.cpp.o
[ 17%] [ 17%] Building CXX object sample_consensus/CMakeFiles/pcl_sample_consensus.dir/src/sac_model_plane.cpp.o
Building CXX object sample_consensus/CMakeFiles/pcl_sample_consensus.dir/src/sac_model_registration.cpp.o
Linking CXX shared library ../lib/libpcl_sample_consensus.dylib
[ 17%] Built target pcl_sample_consensus
make: *** [all] Error 2

<== Failed to process package 'pcl': 
  Command '/Users/tatsch/ros_catkin_ws/install_isolated/env.sh make -j4 -l4' returned non-zero exit status 2

Reproduce this error by running:
==> /Users/tatsch/ros_catkin_ws/install_isolated/env.sh make -j4 -l4

Command failed, exiting.

Can someone help?

Originally posted by J.M.T. on ROS Answers with karma: 266 on 2013-02-01
Post score: 1

A:

Check the pcl_find_ros.cmake, I'm guessing you will see somewhere :
option(USE_ROS "Integrate with ROS rather than using native files" OFF)

Set the OFF to ON and it will tell PCL to use ROS.

Originally posted by Hansg91 with karma: 1909 on 2013-02-02
This answer was ACCEPTED on the original site
Post score: 0

